# jobfit-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
src/jobfit_ai/: __init__.py  llm.py  main.py  models.py  prompts.py  utils.py
src/jobfit_ai/samples/: job_description.md  resume.md
