[project]
name = "jobfit-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gabriel Gouvêa", email = "gouswat@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "dotenv>=0.9.9",
    "numpy>=1.24.0",
    "openai>=1.108.0",
    "pydantic>=2.11.9",
]

[project.scripts]
start = "jobfit_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
